--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -131,17 +131,6 @@
 }
 
 @media only screen and (max-width: 600px) {
-    .main-grid {
-        flex-direction: column;
-        flex: 1 0 auto;
-        /* display: grid;
-        grid-template-columns: 100%;
-        grid-template-areas: 
-        "header"
-        "main"
-        ; */
-        max-width: 100vw;
-    }
     .main-header {
         grid-area: header;
         display: flex;
@@ -157,9 +146,6 @@
     }
     .main-nav {
         display: none;
-    }
-    .main-container {
-        height: 100%;
     }
     .main-footer {
         display: none;
