--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,7 +9,7 @@ html {
     padding: 0;
     margin: 0;
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: hidden;
 }
 
 body {
